# chat_room_libevent

./: CMakeLists.txt  Dockerfile
include/: redis_publisher.h  redis_subscriber.h  server.h
lib/: libevent-2.1.so.7.0.1  libevent_extra-2.1.so.7.0.1  libevent_openssl-2.1.so.7  libevent_pthreads-2.1.so.7
src/: a.out  publisher.cpp  redis_publisher.cpp  redis_subscriber.cpp  server.cpp  subscriber.cpp  test  test.cpp  test_docker.cpp
